[package]
name = "cerke_discord"
version = "0.1.0"
authors = ["jekto_vatimeliju <jekto.vatimeliju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
serenity = "0.8.7" 
# Not upgrading to 0.9.0, 
# since serenity is now fully .await and we have 
# type `std::sync::MutexGuard<'_, std::vec::Vec<std::string::String>>` which is not `Send`
render_cerke_board = "0.1.10"
lazy_static = "1.4.0"
boolinator = "2.4.0"
cetkaik_core = "0.1.10"