[package]
name = "cerke_discord"
version = "0.1.0"
authors = ["jekto_vatimeliju <jekto.vatimeliju@gmail.com>"]
edition = "2018"
exclude = ["renovate.json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.61"
serenity = "0.10.5" 
render_cerke_board = "0.1.14"
lazy_static = "1.4.0"
boolinator = "2.4.0"
cetkaik_core = "0.3.3"
tokio = { version = "0.2", features = ["macros"] }